fixed bottom of page spacing

--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ nav a {
   color: white;
 }
 
-#activities {
+.last-card {
   margin-bottom: 20px;
 }
 
